@@ -1,6 +1,6 @@
 // ========================================================================
 // gnubiff -- a mail notification program
-// Copyright (c) 2000-2007 Nicolas Rougier, 2004-2007 Robert Sowada
+// Copyright (c) 2000-2009 Nicolas Rougier, 2004-2009 Robert Sowada
 //
 // This program is free software: you can redistribute it and/or
 // modify it under the terms of the GNU General Public License as
@@ -17,8 +17,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: mailbox.h,v $
-// Revision      : $Revision: 1.62 $
-// Revision date : $Date: 2007/09/08 18:06:19 $
+// Revision      : $Revision: 1.63 $
+// Revision date : $Date: 2008/04/25 22:52:42 $
 // Author(s)     : Nicolas Rougier, Robert Sowada
 // Short         : 
 //
